@@ -4,6 +4,10 @@ Flusspferd Change Log
 Release 0.7
 -----------
 
+2009-07-19:
+- Remove environment plugin. Env variables are now only available via
+  require('system').env (ServerJS compatability)
+
 2009-07-04:
 - Emacs mode is installed (again) and byte compiled if emacs is found.
 - Line editors (libedit / readline / none) can now be selected via the cmake
